# retro-blackness

./: .env.example  .gitattributes  .gitignore  .luaurc  .pre-commit-config.yaml  CLAUDE.md  README.md  project_description.md  pyproject.toml  rokit.toml  selene.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish-roblox.yml
game/: default.project.json
game/src/: init.server.luau
scripts/: check_architecture_boundaries.luau  check_complexity.luau  check_coverage.luau  check_file_length.luau  check_file_length.py  check_no_main_commit.sh  coverage_entry.luau  publish.luau  run_tests.luau
src/: main.luau
src/application/roblox/: ports.luau
src/application/shared/: use_case.luau
src/domain/roblox/: entities.luau  events.luau  exceptions.luau  value_objects.luau
src/infrastructure/config/: settings.luau
src/infrastructure/roblox_api/: mappers.luau  open_cloud_client.luau  place_publisher.luau
src/infrastructure/webhooks/: logging_notifier.luau  signature_verifier.luau
src/interfaces/: dependencies.luau
src/interfaces/http/: app.luau  router.luau
src/interfaces/webhooks/: roblox_router.luau  schemas.luau
src/retro_blackness/: main.py
src/retro_blackness/interfaces/: dependencies.py
tests/e2e/: api_roblox_router.spec.luau  http_app_error_boundary.spec.luau  test_api_roblox_router.py  webhooks_roblox_router.spec.luau
tests/integration/: open_cloud_client.spec.luau  place_publisher.spec.luau  signature_verifier.spec.luau  test_open_cloud_client.py
tests/support/: expect.luau  protected.luau  testing.luau
(+32 files in other folders)
